--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "aframe": "^0.2.0",
     "aframe-react": "^1.2.0",
     "babel-polyfill": "^6.3.14",
+    "lodash": "^4.10.0",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "react-redux": "^4.4.2",
+    "redux": "^3.4.0",
+    "redux-form": "^5.0.1",
+    "redux-logger": "^2.6.1",
+    "redux-saga": "^0.9.5"
   },
   "scripts": {
     "build": "webpack",
